fixed issue with bookings not showing correctly

--- a/src/PetSittingApp/app/assets/stylesheets/dogs.scss
+++ b/src/PetSittingApp/app/assets/stylesheets/dogs.scss
@@ -44,3 +44,7 @@
   width: 400px;
   border: thin;
 }
+
+.dog-avatar img {
+  max-width: 300px;
+}
